[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/TargetButton.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/ally_target.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/ally_target_hovered.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/ally_target_pressed.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6, 12.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[node name="AllyTargetButton" type="Node2D"]
script = ExtResource( 1 )
normal_texture = ExtResource( 2 )
hover_texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 64.0
margin_bottom = 68.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
